<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Map.MapActivity" />

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_map_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/main_btn_bg">

        <LinearLayout
            android:id="@+id/toolbar_homeup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="7dp"
                android:layout_height="15dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:background="@drawable/menu_arrow"
                android:padding="7dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/activity_info_tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/toolbar_text_marginStart"
                android:background="@color/colorPrimary"
                android:textColor="@color/whiteText" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <!--GPS loading progressbar-->
    <ProgressBar
        android:id="@+id/clockProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/clock" />

    <!-- Call button -->
    <RelativeLayout
        android:id="@+id/activity_map_btn_call"
        style="@style/mainButton"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/main_btn_bg"
        android:clickable="true">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/map_btn_tel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/map_call_button"
            android:textColor="@color/whiteText" />
    </RelativeLayout>
    <!-- End of call button -->


    <!--Call dialog window wrapper-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/dialog_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mapBackGroundOpacity"
        android:visibility="invisible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">



            <!--Close window button-->
            <android.support.constraint.ConstraintLayout
                android:id="@+id/activity_map_btn_window_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/activity_map_window_image_close"
                    style="@android:style/Widget.Holo.Button.Borderless.Small"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:src="@drawable/main_btn_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/activity_map_window_text_close"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/whiteText"
                    app:layout_constraintStart_toEndOf="@+id/activity_map_window_image_close"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
            <!--End of close window button-->

            <!--Call window text + button-->
            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="300dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/activity_map_btn_window_close">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/yellowBG"
                    android:alpha="0.85"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:alpha="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_map_popup_title"
                    android:textAlignment="center"
                    android:textColor="@color/whiteText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/activity_map_window_tv_info"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/activity_map_window_tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:fontFamily="sans-serif"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/charging_rate_info"
                    android:textAlignment="center"
                    android:textColor="@color/whiteText"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/activity_map_btn-call_confirmed" />

                <!--Button layout-->
                <RelativeLayout
                    android:id="@+id/activity_map_btn-call_confirmed"
                    style="@style/mainButton"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:alpha="1"
                    android:background="@drawable/main_btn_bg"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:paddingVertical="6dp"
                        android:src="@drawable/map_btn_phone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/text_btn_popup_call"
                        android:textColor="@color/whiteText" />
                </RelativeLayout>
                <!--End of button layout-->
            </android.support.constraint.ConstraintLayout>
            <!--End of all window text + button-->
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
    <!--End of Call dialog window wrapper-->

</RelativeLayout>
